Aktualizacja lokalizacji
 * Zmiana kodowania pliku messages_pl na UTF-8.
 * Uproszczenie metod zmiany języka.
 * Dodanie pominiętego title i simulationTitle.
 * Poprawa metody changeLanguage, aby aktualizowała bundle po zmianie
   języka. Poprawne ustawianie title okienka.